
v3.2.0-RC21  2023-02-01
* DEPENDENCIES: use the new pEpEngineSequoiaBackend release; this includes some
  build system improvements to which we Engine people contributed, making
  pEpEngineSequoiaBackend easy to install with make following the pEp
  conventions.
* local.conf.example: in order to build the Engine in safety mode 'release' the
  DEBUG variable must now be defined as 'release', instead of being set to be
  empty.
* bug fix: actually keep into account the safety mode to determine the Engine
  compiler flags, so that optimisation and the presence debugging symbols  can
  be controlled.
  Now default to *always* compiling with debugging symbols; however this new
  behaviour can be overridden...
* local.conf.example: ...with new user-overridable variable
  COMPILEWITHDEBUGGINGSYMBOLS , which lets the user decide whether the Engine is
  compiled with the -g (or equivalent) option.
* Build system: PER_MACHINE_DIRECTORY: change the default value to use PREFIX.
  I suspect the previous default was not used much.
* Add cute banner shown when invoking make.
* Fix zero-argument C function prototypes and definitions so as to use (void)
  rather than ().  This is the correct solution and the fix prevents huge
  volumes of distracting warnings from some compilers (reported by heck with
  least apple clang 14).
  This fixes https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/113 .
* Fix https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/118 in 3.x as
  well by adding a test case documenting the behaviour difference; the
  unexpected ugly status code was only returned in 2.x, which required a
  non-trivial fix.
* If the environment variable PEP_NOABORT is defined, to any value, never abort
  on failure indepdendently from the fatality mode.  This is meant for internal
  use with the pEp Engine test suite, but users and developers of other pEp
  components might also find this useful.