@@ -258,6 +258,265 @@ DYNAMIC_API void release(PEP_SESSION session)
     }
 }
 
+/* Return true iff PEP_STATUS has one of the intended values.  This never
+   fails. */
+static bool PEP_STATUS_is_valid(PEP_STATUS status)
+{
+    switch (status) {
+    case PEP_STATUS_OK:
+    case PEP_INIT_CANNOT_LOAD_CRYPTO_LIB:
+    case PEP_INIT_CRYPTO_LIB_INIT_FAILED:
+    case PEP_INIT_NO_CRYPTO_HOME:
+    /* case PEP_INIT_NETPGP_INIT_FAILED: */ /* obsolete */
+    case PEP_INIT_CANNOT_DETERMINE_CRYPTO_VERSION:
+    case PEP_INIT_UNSUPPORTED_CRYPTO_VERSION:
+    case PEP_INIT_CANNOT_CONFIG_CRYPTO_AGENT:
+    case PEP_INIT_SQLITE3_WITHOUT_MUTEX:
+    case PEP_INIT_CANNOT_OPEN_DB:
+    case PEP_INIT_CANNOT_OPEN_SYSTEM_DB:
+    case PEP_INIT_DB_DOWNGRADE_VIOLATION:
+    case PEP_UNKNOWN_DB_ERROR:
+    case PEP_KEY_NOT_FOUND:
+    case PEP_KEY_HAS_AMBIG_NAME:
+    case PEP_GET_KEY_FAILED:
+    case PEP_CANNOT_EXPORT_KEY:
+    case PEP_CANNOT_EDIT_KEY:
+    case PEP_KEY_UNSUITABLE:
+    case PEP_MALFORMED_KEY_RESET_MSG:
+    case PEP_KEY_NOT_RESET:
+    case PEP_CANNOT_DELETE_KEY:
+    case PEP_KEY_IMPORTED:
+    case PEP_NO_KEY_IMPORTED:
+    case PEP_KEY_IMPORT_STATUS_UNKNOWN:
+    case PEP_SOME_KEYS_IMPORTED:
+    case PEP_CANNOT_FIND_IDENTITY:
+    case PEP_CANNOT_SET_PERSON:
+    case PEP_CANNOT_SET_PGP_KEYPAIR:
+    case PEP_CANNOT_SET_IDENTITY:
+    case PEP_CANNOT_SET_TRUST:
+    case PEP_KEY_BLACKLISTED:
+    case PEP_CANNOT_FIND_PERSON:
+    case PEP_CANNOT_SET_PEP_PROTOCOL_VERSION:
+    /* case PEP_CANNOT_SET_PEP_VERSION: */ /* obsolete alias */
+    case PEP_CANNOT_FIND_ALIAS:
+    case PEP_CANNOT_SET_ALIAS:
+    case PEP_NO_OWN_USERID_FOUND:
+    case PEP_UNENCRYPTED:
+    case PEP_VERIFIED:
+    case PEP_DECRYPTED:
+    case PEP_DECRYPTED_AND_VERIFIED:
+    case PEP_DECRYPT_WRONG_FORMAT:
+    case PEP_DECRYPT_NO_KEY:
+    case PEP_DECRYPT_SIGNATURE_DOES_NOT_MATCH:
+    case PEP_VERIFY_NO_KEY:
+    case PEP_VERIFIED_AND_TRUSTED:
+    case PEP_CANNOT_REENCRYPT:
+    case PEP_VERIFY_SIGNER_KEY_REVOKED:
+    case PEP_CANNOT_DECRYPT_UNKNOWN:
+    case PEP_TRUSTWORD_NOT_FOUND:
+    case PEP_TRUSTWORDS_FPR_WRONG_LENGTH:
+    case PEP_TRUSTWORDS_DUPLICATE_FPR:
+    case PEP_CANNOT_CREATE_KEY:
+    case PEP_CANNOT_SEND_KEY:
+    case PEP_PHRASE_NOT_FOUND:
+    case PEP_SEND_FUNCTION_NOT_REGISTERED:
+    case PEP_CONTRAINTS_VIOLATED:
+    case PEP_CANNOT_ENCODE:
+    case PEP_SYNC_NO_NOTIFY_CALLBACK:
+    case PEP_SYNC_ILLEGAL_MESSAGE:
+    case PEP_SYNC_NO_INJECT_CALLBACK:
+    case PEP_SYNC_NO_CHANNEL:
+    case PEP_SYNC_CANNOT_ENCRYPT:
+    case PEP_SYNC_NO_MESSAGE_SEND_CALLBACK:
+    case PEP_SYNC_CANNOT_START:
+    case PEP_CANNOT_INCREASE_SEQUENCE:
+    case PEP_STATEMACHINE_ERROR:
+    case PEP_NO_TRUST:
+    case PEP_STATEMACHINE_INVALID_STATE:
+    case PEP_STATEMACHINE_INVALID_EVENT:
+    case PEP_STATEMACHINE_INVALID_CONDITION:
+    case PEP_STATEMACHINE_INVALID_ACTION:
+    case PEP_STATEMACHINE_INHIBITED_EVENT:
+    case PEP_STATEMACHINE_CANNOT_SEND:
+    case PEP_PASSPHRASE_REQUIRED:
+    case PEP_WRONG_PASSPHRASE:
+    case PEP_PASSPHRASE_FOR_NEW_KEYS_REQUIRED:
+    case PEP_CANNOT_CREATE_GROUP:
+    case PEP_CANNOT_FIND_GROUP_ENTRY:
+    case PEP_GROUP_EXISTS:
+    case PEP_GROUP_NOT_FOUND:
+    case PEP_CANNOT_ENABLE_GROUP:
+    case PEP_CANNOT_DISABLE_GROUP:
+    case PEP_CANNOT_ADD_GROUP_MEMBER:
+    case PEP_CANNOT_DEACTIVATE_GROUP_MEMBER:
+    case PEP_NO_MEMBERSHIP_STATUS_FOUND:
+    case PEP_CANNOT_LEAVE_GROUP:
+    case PEP_CANNOT_JOIN_GROUP:
+    case PEP_CANNOT_RETRIEVE_MEMBERSHIP_INFO:
+    case PEP_DISTRIBUTION_ILLEGAL_MESSAGE:
+    case PEP_STORAGE_ILLEGAL_MESSAGE:
+    case PEP_PEPMESSAGE_ILLEGAL_MESSAGE:
+    case PEP_TRANSPORT_CANNOT_INIT:
+    case PEP_TRANSPORT_CANNOT_INIT_SEND:
+    case PEP_TRANSPORT_CANNOT_INIT_RECV:
+    case PEP_TRANSPORT_DOWN:
+    case PEP_TRANSPORT_ERROR:
+    case PEP_COMMIT_FAILED:
+    case PEP_MESSAGE_CONSUME:
+    case PEP_MESSAGE_IGNORE:
+    case PEP_CANNOT_CONFIG:
+    case PEP_UNBOUND_ENVIRONMENT_VARIABLE:
+    case PEP_PATH_SYNTAX_ERROR:
+    case PEP_RECORD_NOT_FOUND:
+    case PEP_CANNOT_CREATE_TEMP_FILE:
+    case PEP_ILLEGAL_VALUE:
+    case PEP_BUFFER_TOO_SMALL:
+    case PEP_OUT_OF_MEMORY:
+    case PEP_UNKNOWN_ERROR:
+    case PEP_VERSION_MISMATCH:
+        return true;
+
+    default:
+        return false;
+    }
+}
+
+DYNAMIC_API bool PEP_STATUS_is_error(PEP_STATUS status)
+{
+    /* Crash visibly if the status is wrong. */
+    assert(PEP_STATUS_is_valid(status));
+
+    /* This is for when assertions are disabled.  Even if the behaviour is not
+       documented because I do not want to encourage users to use invalid
+       statuses, it is safer to consider a wrong status as an error: the caller
+       will check it. */
+    if (! PEP_STATUS_is_valid(status))
+        return true;
+
+    /* Now, judge each case: */
+    switch (status) {
+    case PEP_STATUS_OK:
+    case PEP_KEY_NOT_FOUND:              // questionable
+    case PEP_KEY_IMPORTED:
+    case PEP_NO_KEY_IMPORTED:
+    case PEP_KEY_IMPORT_STATUS_UNKNOWN:  // questionable: never used anyway
+    case PEP_SOME_KEYS_IMPORTED:
+    case PEP_UNENCRYPTED:
+    case PEP_VERIFIED:
+    case PEP_DECRYPTED:
+    case PEP_DECRYPTED_AND_VERIFIED:
+    case PEP_VERIFIED_AND_TRUSTED:
+    case PEP_PASSPHRASE_REQUIRED:               // questionable
+    case PEP_PASSPHRASE_FOR_NEW_KEYS_REQUIRED:  // questionable
+        return false;
+
+    case PEP_INIT_CANNOT_LOAD_CRYPTO_LIB:
+    case PEP_INIT_CRYPTO_LIB_INIT_FAILED:
+    case PEP_INIT_NO_CRYPTO_HOME:
+    /* case PEP_INIT_NETPGP_INIT_FAILED: */ /* obsolete */
+    case PEP_INIT_CANNOT_DETERMINE_CRYPTO_VERSION:
+    case PEP_INIT_UNSUPPORTED_CRYPTO_VERSION:
+    case PEP_INIT_CANNOT_CONFIG_CRYPTO_AGENT:
+    case PEP_INIT_SQLITE3_WITHOUT_MUTEX:
+    case PEP_INIT_CANNOT_OPEN_DB:
+    case PEP_INIT_CANNOT_OPEN_SYSTEM_DB:
+    case PEP_INIT_DB_DOWNGRADE_VIOLATION:
+    case PEP_UNKNOWN_DB_ERROR:
+    case PEP_KEY_HAS_AMBIG_NAME:
+    case PEP_GET_KEY_FAILED:
+    case PEP_CANNOT_EXPORT_KEY:
+    case PEP_CANNOT_EDIT_KEY:
+    case PEP_KEY_UNSUITABLE:
+    case PEP_MALFORMED_KEY_RESET_MSG:
+    case PEP_KEY_NOT_RESET:
+    case PEP_CANNOT_DELETE_KEY:
+    case PEP_CANNOT_FIND_IDENTITY:
+    case PEP_CANNOT_SET_PERSON:
+    case PEP_CANNOT_SET_PGP_KEYPAIR:
+    case PEP_CANNOT_SET_IDENTITY:
+    case PEP_CANNOT_SET_TRUST:
+    case PEP_KEY_BLACKLISTED: /* no longer used */
+    case PEP_CANNOT_FIND_PERSON:
+    case PEP_CANNOT_SET_PEP_PROTOCOL_VERSION:
+    /* case PEP_CANNOT_SET_PEP_VERSION: */ /* obsolete alias */
+    case PEP_CANNOT_FIND_ALIAS:
+    case PEP_CANNOT_SET_ALIAS:
+    case PEP_NO_OWN_USERID_FOUND:
+    case PEP_DECRYPT_WRONG_FORMAT:
+    case PEP_DECRYPT_NO_KEY:
+    case PEP_DECRYPT_SIGNATURE_DOES_NOT_MATCH:
+    case PEP_VERIFY_NO_KEY:
+    case PEP_CANNOT_REENCRYPT:
+    case PEP_VERIFY_SIGNER_KEY_REVOKED:
+    case PEP_CANNOT_DECRYPT_UNKNOWN:
+    case PEP_TRUSTWORD_NOT_FOUND:
+    case PEP_TRUSTWORDS_FPR_WRONG_LENGTH:
+    case PEP_TRUSTWORDS_DUPLICATE_FPR:
+    case PEP_CANNOT_CREATE_KEY:
+    case PEP_CANNOT_SEND_KEY:
+    case PEP_PHRASE_NOT_FOUND:
+    case PEP_SEND_FUNCTION_NOT_REGISTERED:
+    case PEP_CONTRAINTS_VIOLATED:
+    case PEP_CANNOT_ENCODE:
+    case PEP_SYNC_NO_NOTIFY_CALLBACK:
+    case PEP_SYNC_ILLEGAL_MESSAGE:
+    case PEP_SYNC_NO_INJECT_CALLBACK:
+    case PEP_SYNC_NO_CHANNEL:
+    case PEP_SYNC_CANNOT_ENCRYPT:
+    case PEP_SYNC_NO_MESSAGE_SEND_CALLBACK:
+    case PEP_SYNC_CANNOT_START:
+    case PEP_CANNOT_INCREASE_SEQUENCE:
+    case PEP_STATEMACHINE_ERROR:
+    case PEP_NO_TRUST:
+    case PEP_STATEMACHINE_INVALID_STATE:
+    case PEP_STATEMACHINE_INVALID_EVENT:
+    case PEP_STATEMACHINE_INVALID_CONDITION:
+    case PEP_STATEMACHINE_INVALID_ACTION:
+    case PEP_STATEMACHINE_INHIBITED_EVENT:
+    case PEP_STATEMACHINE_CANNOT_SEND:
+    case PEP_WRONG_PASSPHRASE:
+    case PEP_CANNOT_CREATE_GROUP:
+    case PEP_CANNOT_FIND_GROUP_ENTRY:
+    case PEP_GROUP_EXISTS:
+    case PEP_GROUP_NOT_FOUND:
+    case PEP_CANNOT_ENABLE_GROUP:
+    case PEP_CANNOT_DISABLE_GROUP:
+    case PEP_CANNOT_ADD_GROUP_MEMBER:
+    case PEP_CANNOT_DEACTIVATE_GROUP_MEMBER:
+    case PEP_NO_MEMBERSHIP_STATUS_FOUND:
+    case PEP_CANNOT_LEAVE_GROUP:
+    case PEP_CANNOT_JOIN_GROUP:
+    case PEP_CANNOT_RETRIEVE_MEMBERSHIP_INFO:
+    case PEP_DISTRIBUTION_ILLEGAL_MESSAGE:
+    case PEP_STORAGE_ILLEGAL_MESSAGE:
+    case PEP_PEPMESSAGE_ILLEGAL_MESSAGE:
+    case PEP_TRANSPORT_CANNOT_INIT:
+    case PEP_TRANSPORT_CANNOT_INIT_SEND:
+    case PEP_TRANSPORT_CANNOT_INIT_RECV:
+    case PEP_TRANSPORT_DOWN:
+    case PEP_TRANSPORT_ERROR:
+    case PEP_COMMIT_FAILED:
+    case PEP_MESSAGE_CONSUME:
+    case PEP_MESSAGE_IGNORE:
+    case PEP_CANNOT_CONFIG:
+    case PEP_UNBOUND_ENVIRONMENT_VARIABLE:
+    case PEP_PATH_SYNTAX_ERROR:
+    case PEP_RECORD_NOT_FOUND:
+    case PEP_CANNOT_CREATE_TEMP_FILE:
+    case PEP_ILLEGAL_VALUE:
+    case PEP_BUFFER_TOO_SMALL:
+    case PEP_OUT_OF_MEMORY:
+    case PEP_UNKNOWN_ERROR:
+    case PEP_VERSION_MISMATCH:
+        return true;
+
+    default:
+        /* This is meant to be unreachable. */
+        assert(false);
+    }
+
+}
+
 DYNAMIC_API void config_enable_echo_protocol(PEP_SESSION session, bool enable)
 {
     PEP_REQUIRE_ORELSE(session, { return; });
