@@ -1,3 +1,5 @@
+* New API function PEP_STATUS_is_error.
+  Closes https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/111 .
 
 v3.2.0-RC21  2023-02-01
 * DEPENDENCIES: use the new pEpEngineSequoiaBackend release; this includes some
